--- a/scss/_articles.scss
+++ b/scss/_articles.scss
@@ -19,6 +19,13 @@
     left: 0px;
     opacity: 0.3;
   }
+  .parragraph{
+    padding-bottom: 5px;
+    p{
+      margin: 0;
+      padding: 0;
+    }
+  }
   h2{
     text-align: center;
     font-family: "dosisSemiBold";
