[feature] - changes in zoom meeting

--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -40,7 +40,7 @@
       }
       h2{
         color: $light;
-        font-family: "dosisSemiBold";
+        font-family: "dosisMedium";
         position: relative;
         font-size: 28px;
         &:hover{
