[feature] - icons in seeMore, padding in articles & firs letter capital in alret in booking

--- a/scss/_articles.scss
+++ b/scss/_articles.scss
@@ -20,7 +20,7 @@
     opacity: 0.3;
   }
   .parragraph{
-    padding-bottom: 10px;
+    padding: 10px 0px;
     p{
       margin: 0;
       padding: 0;
