[feature] - reduce padding to inputs in sidebar, change sidebarDescription &

--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -66,14 +66,15 @@
           justify-content: space-between;
         }
         input{
-          padding: 5px 10px;
+          padding: 2px 10px;
           margin-bottom: 10px;
           font-family: "dosisRegular";
+          font-size: 15px;
         }
         textarea{
           margin-bottom: 10px;
           padding: 5px 10px;
-          height: 100px;
+          height: 75px;
           resize: none;
           font-family: "dosisRegular";
         }
