--- a/src/App.css
+++ b/src/App.css
@@ -379,13 +379,14 @@ html a {
           display: flex;
           justify-content: space-between; }
         .sidebar .sidebarContainer .sidebarFormContainer form input {
-          padding: 5px 10px;
+          padding: 2px 10px;
           margin-bottom: 10px;
-          font-family: "dosisRegular"; }
+          font-family: "dosisRegular";
+          font-size: 15px; }
         .sidebar .sidebarContainer .sidebarFormContainer form textarea {
           margin-bottom: 10px;
           padding: 5px 10px;
-          height: 100px;
+          height: 75px;
           resize: none;
           font-family: "dosisRegular"; }
         .sidebar .sidebarContainer .sidebarFormContainer form select {
