--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -23,6 +23,7 @@
     grid-template-rows: 1fr 2fr;
     row-gap: 50px;
     align-items: center;
+    height: 100%;
     .sidebarTitleContainer{
       height: 100%;
       width: 100%;
