--- a/scss/_articles.scss
+++ b/scss/_articles.scss
@@ -8,6 +8,16 @@
   border-radius: 20px;
   opacity: 0;
   animation: fadeIn 1s ease-in-out forwards;
+  .closeBtn{
+    color: $light;
+    position: absolute;
+    right: 30px;
+    top: 20px;
+    font-family: "LoveloBlack";
+    cursor: pointer;
+    font-size: 20px;
+    z-index: 200;
+  }
   &:before{
     border-radius: 20px;
     content: "";
