--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,8 +3,8 @@
     position: relative;
     display: flex;
     background-color: $almond;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     justify-content: space-evenly;
     align-items: center;
     z-index: 100;
@@ -17,6 +17,8 @@
     padding: 10px 50px;
     border-radius: 5px;
     background-color: $cinereous;
+    margin-top: 10px;
+    margin-bottom: 10px;
     &:hover{
       background-color: $paleDogwood;
       cursor: pointer;
@@ -26,12 +28,6 @@
       font-size: 18px;
       color: $light;
     }
-  }
-  .footerConventionsContainer{
-    display: flex;
-    background-color: $almond;
-    justify-content: center;
-    padding-bottom: 40px;
   }
   .footerCopyrightContainer{
     display: flex;
