--- a/src/App.css
+++ b/src/App.css
@@ -583,6 +583,9 @@ html a {
 .article8:before {
   background-image: url("../src/images/article8Image.JPG"); }
 
+.closed {
+  animation: fadeOut 1s ease-in-out forwards; }
+
 .seeMoreContainer {
   position: absolute;
   z-index: 2000;
