--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -50,7 +50,7 @@
     }
     .article1{
       &:before{
-        background-image: url("../src/images/article1Image.JPG");
+        background-image: url("../src//images/article1Image.jpg");
       }
     }
     .article2{
@@ -70,7 +70,7 @@
     }
     .article5{
       &:before{
-        background-image: url("../src/images/article5Image.JPG");
+        background-image: url("../src/images/article5Image.jpg");
       }
     }
     .article6{
@@ -80,12 +80,32 @@
     }
     .article7{
       &:before{
-        background-image: url("../src/images/article7Image.JPG");
+        background-image: url("../src/images/article7Image.jpg");
       }
     }
     .article8{
       &:before{
-        background-image: url("../src/images/article8Image.JPG");
+        background-image: url("../src/images/article8Image.jpg");
+      }
+    }
+    .article9{
+      &:before{
+        background-image: url("../src/images/article9Image.jpg");
+      }
+    }
+    .article10{
+      &:before{
+        background-image: url("../src/images/article10Image.jpg");
+      }
+    }
+    .article11{
+      &:before{
+        background-image: url("../src/images/article11Image.jpg");
+      }
+    }
+    .article12{
+      &:before{
+        background-image: url("../src/images/article12Image.jpg");
       }
     }
   }
