[feature] - changes zoom meeting 20/05

--- a/scss/_section2.scss
+++ b/scss/_section2.scss
@@ -30,6 +30,7 @@
         margin-left: 20px;
         font-family: "dosisRegular";
         text-align: justify;
+        justify-self: flex-start;
       }
     }
   }
