--- a/src/App.css
+++ b/src/App.css
@@ -147,7 +147,8 @@ html a {
       .section2Container .section2DescriptionItemsContainer .section2ItemContainer .section2Text {
         margin-left: 20px;
         font-family: "dosisRegular";
-        text-align: justify; }
+        text-align: justify;
+        justify-self: flex-start; }
 
 .section3Container {
   position: relative;
