[feature] - change font size to rem

--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -3,7 +3,7 @@
     font-family: "beautyDream";
     text-align: center;
     padding-top: 50px;
-    font-size: 40px;
+    font-size: 2.5rem;
     color: $dark;
   }
   .blogGrid{
@@ -42,7 +42,7 @@
         color: $light;
         font-family: "dosisMedium";
         position: relative;
-        font-size: 28px;
+        font-size: 1.75rem;
         &:hover{
           cursor: pointer;
         }
