--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -36,14 +36,14 @@
     padding-right: 120px;
     .homeDescriptiontitleDecorative{
       font-family: "beautyDream";
-      font-size: 40px;
+      font-size: 2.5rem;
       padding-bottom: 20px;
     }
     .homeDescriptionTitle{
       font-family: "loveloBlack";
       padding-bottom: 25px;
       padding-top: 10px;
-      font-size: 25px;
+      font-size: 1.56rem;
     }
     .homeDescriptionText{
       font-family: "dosisRegular";
