--- a/scss/_section2.scss
+++ b/scss/_section2.scss
@@ -8,7 +8,7 @@
     padding-bottom: 40px;
     .section2Title{
       font-family: "beautyDream";
-      font-size: 40px;
+      font-size: 2.5rem;
     }
   }
   .section2DescriptionItemsContainer{
@@ -23,7 +23,7 @@
       display: flex;
       align-items:center;
       .section2Item{
-        font-size: 30px;
+        font-size: 1.87rem;
         color: $paleDogwood;
       }
       .section2Text{
