--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -6,7 +6,7 @@
     margin: 40px 100px 60px 100px;
     .section3Title{
       font-family: "loveloBlack";
-      font-size: 22px;
+      font-size: 1.37rem;
       text-align: center;
       margin-bottom: 25px;
     }
@@ -14,7 +14,7 @@
       padding: 0px 70px;
       .section3SubTitle{
         font-family: "dosisRegular";
-        font-size: 16px;
+        font-size: 1rem;
         text-align:justify;
         margin-bottom: 10px;
       }
@@ -53,14 +53,14 @@
       .professionalName{
         font-family: "loveloBlack";
         padding: 5px 15px;
-        font-size: 19px;
+        font-size: 1.18rem;
         color: $light;
         text-align: center;
       }
       .professionalDescription{
         font-family: "dosisSemiBold";
         padding-bottom: 10px;
-        font-size: 16px;
+        font-size: 1rem;
         color: $isabeline;
         text-align: center;
       }
