--- a/scss/_articles.scss
+++ b/scss/_articles.scss
@@ -15,7 +15,7 @@
     top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.25rem;
     z-index: 200;
   }
   &:before{
@@ -43,7 +43,7 @@
     color: $almond;
   }
   p{
-    font-size: 18px;
+    font-size: 1.12rem;
     padding: 10px 0px;
     text-align: justify;
     color: &light;
