--- a/scss/_frequentQuestions.scss
+++ b/scss/_frequentQuestions.scss
@@ -14,7 +14,7 @@
     padding-bottom: 20px;
     text-align: center;
     font-family: "LoveloBlack";
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .questionContainer{
@@ -22,7 +22,7 @@
     .questionText{
       position: relative;
       z-index: 10;
-      font-size: 18px;
+      font-size: 1.12rem;
       font-family: "dosisRegular";
       &:hover{
         color: $cinereous;
@@ -38,7 +38,7 @@
     border-top: 1px solid $almond;
     border-bottom: 1px solid $almond;
     .answerText{
-      font-size: 16px;
+      font-size: 1rem;
       font-family: "dosisRegular";
     }
   }
