--- a/scss/_seeMore.scss
+++ b/scss/_seeMore.scss
@@ -19,21 +19,21 @@
     top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.25rem;
     z-index: 200;
   }
   h2{
     text-align: center;
     font-family: "loveloBlack";
     padding-top: 30px;
-    font-size: 30px;
+    font-size: 1.87rem;
     color: $cinereous;
   }
   h3{
     text-align: center;
     font-family: "dosisRegular";
     padding: 30px 0px;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: $cinereous;
   }
   .teamDescriptionContainer{
@@ -55,7 +55,7 @@
       padding-left: 10px;
       color: $dark;
       font-family: "dosisRegular";
-      font-size: 16px;
+      font-size: 1rem;
       text-align: justify;
     }
   }
