--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -14,7 +14,7 @@
     top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.25rem;
     z-index: 200;
   }
   .sidebarContainer{
@@ -46,14 +46,14 @@
       .sidebarTitle{
         color: $light;
         font-family: "loveloBlack";
-        font-size: 35px;
+        font-size: 2.18rem;
         position: relative;
       }
       .sidebarSubTitle{
         position: relative;
         color: $light;
         font-family: "dosisRegular";
-        font-size: 20px;
+        font-size: 1.25rem;
       }
     }
     .sidebarFormContainer{
@@ -70,7 +70,7 @@
           padding: 2px 10px;
           margin-bottom: 10px;
           font-family: "dosisRegular";
-          font-size: 15px;
+          font-size: 0.93rem;
         }
         textarea{
           margin-bottom: 10px;
