--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .navBarTitleContainer {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  padding-left: 20px; }
   .navBarTitleContainer:hover {
     color: #212121;
     animation-name: scale;
@@ -10,14 +11,19 @@
   .navBarTitleContainer .navBarTitle {
     margin: 0;
     font-family: LoveloBlack;
-    font-size: 30px; }
+    font-size: 1.85rem; }
   .navBarTitleContainer .navBarSubTitle {
     margin: 0;
     font-family: "dosisRegular";
-    font-size: 17px; }
+    font-size: 1.05rem; }
 
 .navbar {
   background-color: #e7d7c9; }
+
+.navbar-nav {
+  justify-content: flex-end;
+  text-align: end;
+  padding-right: 20px; }
 
 .navbar-brand {
   margin: 0 !important;
@@ -29,22 +35,28 @@
 .nav-link {
   font-family: "dosisRegular";
   padding: 0 !important;
-  font-size: 20px !important;
+  font-size: 1.25rem !important;
   color: #212121 !important; }
   .nav-link:hover {
     color: #a38f85 !important; }
 
-.nav-link:not(:last-child) {
-  border-right: 2px solid #212121;
-  padding-right: 20px !important;
+.navbar-toggler {
   margin-right: 20px; }
 
 .navbar-expand-lg {
   justify-content: space-evenly; }
 
 @media (min-width: 992px) {
+  .navbar-nav {
+    padding: 0px; }
   .navbar-expand-lg .navbar-collapse {
-    justify-content: center; } }
+    justify-content: center; }
+  .navBarTitleContainer {
+    padding-left: 0px; }
+  .nav-link:not(:last-child) {
+    border-right: 2px solid #212121;
+    padding-right: 20px !important;
+    margin-right: 20px; } }
 
 .fixed-top {
   padding-top: 30px !important;
@@ -114,13 +126,13 @@ html a {
     padding-right: 120px; }
     .section1Container .homeDescriptionContainer .homeDescriptiontitleDecorative {
       font-family: "beautyDream";
-      font-size: 40px;
+      font-size: 2.5rem;
       padding-bottom: 20px; }
     .section1Container .homeDescriptionContainer .homeDescriptionTitle {
       font-family: "loveloBlack";
       padding-bottom: 25px;
       padding-top: 10px;
-      font-size: 25px; }
+      font-size: 1.56rem; }
     .section1Container .homeDescriptionContainer .homeDescriptionText {
       font-family: "dosisRegular";
       padding-bottom: 20px;
@@ -136,7 +148,7 @@ html a {
     padding-bottom: 40px; }
     .section2Container .section2TitleContainer .section2Title {
       font-family: "beautyDream";
-      font-size: 40px; }
+      font-size: 2.5rem; }
   .section2Container .section2DescriptionItemsContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -149,7 +161,7 @@ html a {
       display: flex;
       align-items: center; }
       .section2Container .section2DescriptionItemsContainer .section2ItemContainer .section2Item {
-        font-size: 30px;
+        font-size: 1.87rem;
         color: #d4b2a7; }
       .section2Container .section2DescriptionItemsContainer .section2ItemContainer .section2Text {
         margin-left: 20px;
@@ -165,14 +177,14 @@ html a {
     margin: 40px 100px 60px 100px; }
     .section3Container .section3TitleContainer .section3Title {
       font-family: "loveloBlack";
-      font-size: 22px;
+      font-size: 1.37rem;
       text-align: center;
       margin-bottom: 25px; }
     .section3Container .section3TitleContainer .subTitleContainer {
       padding: 0px 70px; }
       .section3Container .section3TitleContainer .subTitleContainer .section3SubTitle {
         font-family: "dosisRegular";
-        font-size: 16px;
+        font-size: 1rem;
         text-align: justify;
         margin-bottom: 10px; }
   .section3Container .professionalsContainer {
@@ -205,13 +217,13 @@ html a {
       .section3Container .professionalsContainer .professionalDescriptionContainer .professionalName {
         font-family: "loveloBlack";
         padding: 5px 15px;
-        font-size: 19px;
+        font-size: 1.18rem;
         color: #fff;
         text-align: center; }
       .section3Container .professionalsContainer .professionalDescriptionContainer .professionalDescription {
         font-family: "dosisSemiBold";
         padding-bottom: 10px;
-        font-size: 16px;
+        font-size: 1rem;
         color: #ede9e3;
         text-align: center; }
       .section3Container .professionalsContainer .professionalDescriptionContainer .seeMore {
@@ -255,7 +267,7 @@ html a {
   z-index: 100; }
   .footerContainer .footerTextContainer .footerText {
     font-family: "dosisRegular";
-    font-size: 20px; }
+    font-size: 1.25rem; }
 
 .footerContainer .footerButtonContainer {
   padding: 10px 50px;
@@ -268,7 +280,7 @@ html a {
     cursor: pointer; }
   .footerContainer .footerButtonContainer .footerButtonText {
     font-family: "dosisRegular";
-    font-size: 18px;
+    font-size: 1.12rem;
     color: #fff; }
 
 .footerContainer .footerCopyrightContainer {
@@ -281,7 +293,7 @@ html a {
   .footerContainer .footerCopyrightContainer h4 {
     padding-left: 5px;
     font-family: "dosisRegular";
-    font-size: 14px; }
+    font-size: 0.87rem; }
 
 .frequentQuestionsContainer {
   padding: 50px;
@@ -298,13 +310,13 @@ html a {
     padding-bottom: 20px;
     text-align: center;
     font-family: "LoveloBlack";
-    font-size: 20px; }
+    font-size: 1.25rem; }
   .frequentQuestionsContainer .questionContainer {
     margin: 10px; }
     .frequentQuestionsContainer .questionContainer .questionText {
       position: relative;
       z-index: 10;
-      font-size: 18px;
+      font-size: 1.12rem;
       font-family: "dosisRegular"; }
       .frequentQuestionsContainer .questionContainer .questionText:hover {
         color: #a38f85; }
@@ -317,7 +329,7 @@ html a {
     border-top: 1px solid #e7d7c9;
     border-bottom: 1px solid #e7d7c9; }
     .frequentQuestionsContainer .answerContainer .answerText {
-      font-size: 16px;
+      font-size: 1rem;
       font-family: "dosisRegular"; }
   .frequentQuestionsContainer .frequentFootContainer {
     display: flex;
@@ -345,7 +357,7 @@ html a {
     top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.25rem;
     z-index: 200; }
   .sidebar .sidebarContainer {
     display: grid;
@@ -375,13 +387,13 @@ html a {
       .sidebar .sidebarContainer .sidebarTitleContainer .sidebarTitle {
         color: #fff;
         font-family: "loveloBlack";
-        font-size: 35px;
+        font-size: 2.18rem;
         position: relative; }
       .sidebar .sidebarContainer .sidebarTitleContainer .sidebarSubTitle {
         position: relative;
         color: #fff;
         font-family: "dosisRegular";
-        font-size: 20px; }
+        font-size: 1.25rem; }
     .sidebar .sidebarContainer .sidebarFormContainer {
       padding-left: 10%;
       padding-right: 10%; }
@@ -395,7 +407,7 @@ html a {
           padding: 2px 10px;
           margin-bottom: 10px;
           font-family: "dosisRegular";
-          font-size: 15px; }
+          font-size: 0.93rem; }
         .sidebar .sidebarContainer .sidebarFormContainer form textarea {
           margin-bottom: 10px;
           padding: 5px 10px;
@@ -436,7 +448,7 @@ html a {
     animation: rotate 1s linear infinite; }
   .loadingContainer .loadingText {
     font-family: "dosisRegular";
-    font-size: 25px; }
+    font-size: 1.56rem; }
 
 @keyframes rotate {
   0% {
@@ -459,7 +471,7 @@ html a {
   font-family: "beautyDream";
   text-align: center;
   padding-top: 50px;
-  font-size: 40px;
+  font-size: 2.5rem;
   color: #212121; }
 
 .blogContainer .blogGrid {
@@ -496,7 +508,7 @@ html a {
       color: #fff;
       font-family: "dosisMedium";
       position: relative;
-      font-size: 28px; }
+      font-size: 1.75rem; }
       .blogContainer .blogGrid .articleContainer h2:hover {
         cursor: pointer; }
   .blogContainer .blogGrid .article1:before {
@@ -541,7 +553,7 @@ html a {
     top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.25rem;
     z-index: 200; }
   .articleTextContainer:before {
     border-radius: 20px;
@@ -564,7 +576,7 @@ html a {
     padding-bottom: 30px;
     color: #e7d7c9; }
   .articleTextContainer p {
-    font-size: 18px;
+    font-size: 1.12rem;
     padding: 10px 0px;
     text-align: justify;
     color: .articleTextContainer p light;
@@ -635,19 +647,19 @@ html a {
     top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.25rem;
     z-index: 200; }
   .seeMoreContainer h2 {
     text-align: center;
     font-family: "loveloBlack";
     padding-top: 30px;
-    font-size: 30px;
+    font-size: 1.87rem;
     color: #a38f85; }
   .seeMoreContainer h3 {
     text-align: center;
     font-family: "dosisRegular";
     padding: 30px 0px;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: #a38f85; }
   .seeMoreContainer .teamDescriptionContainer {
     display: grid;
@@ -666,7 +678,7 @@ html a {
       padding-left: 10px;
       color: #212121;
       font-family: "dosisRegular";
-      font-size: 16px;
+      font-size: 1rem;
       text-align: justify; }
 
 .seeMoreClosed {
@@ -694,19 +706,19 @@ html a {
     top: 20px;
     font-family: "LoveloBlack";
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.25rem;
     z-index: 200; }
   .conventionsContainer h2 {
     text-align: center;
     font-family: "loveloBlack";
     padding-top: 30px;
-    font-size: 30px;
+    font-size: 1.87rem;
     color: #a38f85; }
   .conventionsContainer h3 {
     text-align: center;
     font-family: "dosisRegular";
     padding: 25px 0px;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: #a38f85; }
   .conventionsContainer .conventionsDescriptionContainer {
     padding: 10px 50px; }
@@ -718,7 +730,7 @@ html a {
       .conventionsContainer .conventionsDescriptionContainer .itemContainer p {
         margin-left: 20px;
         font-family: "dosisRegular";
-        font-size: 18px; }
+        font-size: 1.2rem; }
     .conventionsContainer .conventionsDescriptionContainer .isapresContainer {
       display: flex;
       width: 100%;
