--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -3,52 +3,85 @@
   .imageTitleContainer{
     position: relative;
     z-index: 99;
-    background-image: url("../src/images/section1Background.jpg");
     background-size: cover;
-    height: 400px;
+    background-image: url("../src/images/section1Background.jpg");
+    height: 170px;
     display: flex;
   }
   .subtitleContainer{
-    display: flex;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     .imageSubtitleContainer{
-      min-height: 100%;
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      .mapImage{
-        opacity: .8;
-        height: 80%;
-        border-radius: 20px;
-      }
-      .mapQuote{
-        font-family: "dosisRegular";
-        font-style: italic;
-        padding-top: 5px;
-      }
+      display: none;
     }
   }
   .homeDescriptionContainer{
-    width: 50%;
-    padding-right: 120px;
+    padding: 0px 20px;
     .homeDescriptiontitleDecorative{
       font-family: "beautyDream";
-      font-size: 2.5rem;
-      padding-bottom: 20px;
+      font-size: 2rem;
+      padding-bottom: 10px;
     }
     .homeDescriptionTitle{
       font-family: "loveloBlack";
-      padding-bottom: 25px;
-      padding-top: 10px;
-      font-size: 1.56rem;
+      padding-bottom: 15px;
+      padding-top: 5px;
+      font-size: 1.2rem;
     }
     .homeDescriptionText{
       font-family: "dosisRegular";
-      padding-bottom: 20px;
+      font-size: .8rem;
+      padding-bottom: 10px;
       text-align: justify;
+    }
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .section1Container{
+    .imageTitleContainer{
+    background-size: cover;
+    height: 400px;
+    }
+    .subtitleContainer{
+      display: flex;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      .imageSubtitleContainer{
+        min-height: 100%;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        .mapImage{
+          opacity: .8;
+          height: 80%;
+          border-radius: 20px;
+        }
+        .mapQuote{
+          font-family: "dosisRegular";
+          font-style: italic;
+          padding-top: 5px;
+        }
+      }
+    }
+    .homeDescriptionContainer{
+      width: 50%;
+      padding: 0px 120px 0px 0px;
+      .homeDescriptiontitleDecorative{
+        font-size: 2.5rem;
+        padding-bottom: 20px;
+      }
+      .homeDescriptionTitle{
+        padding-bottom: 25px;
+        padding-top: 10px;
+        font-size: 1.56rem;
+      }
+      .homeDescriptionText{
+        font-size: 1rem;
+        padding-bottom: 20px;
+      }
     }
   }
 }
